--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "      <td>fair</td>\n",
        "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>113000.0</td>\n",
+       "      <td>121928.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>pickup</td>\n",
        "      <td>Unknown</td>\n",
@@ -163,7 +163,7 @@
        "0   9400        2011          bmw x5       good        6.0  gas  145000.0   \n",
        "1  25500        2011      ford f-150       good        6.0  gas   88705.0   \n",
        "2   5500        2013  hyundai sonata   like new        4.0  gas  110000.0   \n",
-       "3   1500        2003      ford f-150       fair        8.0  gas  113000.0   \n",
+       "3   1500        2003      ford f-150       fair        8.0  gas  121928.0   \n",
        "4  14900        2017    chrysler 200  excellent        4.0  gas   80903.0   \n",
        "\n",
        "  transmission    type paint_color  is_4wd date_posted  days_listed  \n",
@@ -174,7 +174,7 @@
        "4    automatic   sedan       black     0.0  2019-04-02           28  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,9 @@
     "df.isnull().sum()\n",
     "df['is_4wd'] = df['is_4wd'].fillna(0)\n",
     "df['paint_color'] = df['paint_color'].fillna('Unknown')\n",
-    "df[['model_year', 'odometer']] = df[['model_year', 'odometer']].fillna(df[['model_year', 'odometer']].median())\n",
+    "df['model_year'] = df['model_year'].fillna(df.groupby(['model'])['model_year'].transform('median'))\n",
+    "df['odometer'] = df['odometer'].fillna(df.groupby(['model'])['odometer'].transform('median'))\n",
+    "df['cylinders'] = df['cylinders'].fillna(df.groupby(['model'])['cylinders'].transform('median'))\n",
     "df.drop_duplicates(inplace=True)\n",
     "df['model_year'] = df['model_year'].astype(int)\n",
     "df.head()"
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +310,7 @@
        "      <td>fair</td>\n",
        "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>113000.0</td>\n",
+       "      <td>121928.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>pickup</td>\n",
        "      <td>Unknown</td>\n",
@@ -350,7 +352,7 @@
        "0        6.0  gas  145000.0    automatic     SUV     Unknown     1.0   \n",
        "1        6.0  gas   88705.0    automatic  pickup       white     1.0   \n",
        "2        4.0  gas  110000.0    automatic   sedan         red     0.0   \n",
-       "3        8.0  gas  113000.0    automatic  pickup     Unknown     0.0   \n",
+       "3        8.0  gas  121928.0    automatic  pickup     Unknown     0.0   \n",
        "4        4.0  gas   80903.0    automatic   sedan       black     0.0   \n",
        "\n",
        "  date_posted  days_listed  \n",
@@ -361,7 +363,7 @@
        "4  2019-04-02           28  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +486,7 @@
        "      <td>fair</td>\n",
        "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>113000.0</td>\n",
+       "      <td>121928.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>pickup</td>\n",
        "      <td>Unknown</td>\n",
@@ -527,7 +529,7 @@
        "0  145000.0    automatic     SUV     Unknown     1.0  2018-06-23           19   \n",
        "1   88705.0    automatic  pickup       white     1.0  2018-10-19           50   \n",
        "2  110000.0    automatic   sedan         red     0.0  2019-02-07           79   \n",
-       "3  113000.0    automatic  pickup     Unknown     0.0  2019-03-22            9   \n",
+       "3  121928.0    automatic  pickup     Unknown     0.0  2019-03-22            9   \n",
        "4   80903.0    automatic   sedan       black     0.0  2019-04-02           28   \n",
        "\n",
        "            model  \n",
@@ -538,7 +540,7 @@
        "4    chrysler 200  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,20 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-01 14:43:12.702 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:12.708 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:12.755 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:12.758 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:13.257 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:13.264 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:43:13.267 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2024-10-02 15:10:03.478 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.480 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.487 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.491 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.966 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.969 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:03.970 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     },
     {
@@ -585,7 +587,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,20 +617,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-01 14:36:41.766 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:41.771 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:41.775 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:41.801 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.041 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.046 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.046 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2024-10-02 15:10:03.998 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.001 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.005 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.008 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.179 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.182 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.183 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     },
     {
@@ -637,7 +639,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,31 +666,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-01 14:36:42.140 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.179 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.182 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.185 Session state does not function when running a script without `streamlit run`\n",
-      "2024-10-01 14:36:42.190 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.202 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.213 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.217 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.221 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.243 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.246 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.247 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.250 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.253 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.255 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.336 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.337 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2024-10-01 14:36:42.338 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2024-10-02 15:10:04.355 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.361 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.364 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.369 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-02 15:10:04.375 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.390 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.395 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.400 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.402 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.404 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.408 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.410 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.411 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.418 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.492 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.494 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2024-10-02 15:10:04.495 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     },
     {
@@ -697,7 +704,7 @@
        "DeltaGenerator()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
